--- a/SH/file.html
+++ b/SH/file.html
@@ -22,7 +22,7 @@
       
       <div class="product-info">
         <div class="product-weight">500 GM</div>
-        <a href="#" class="product-button">Select Delivery</a>
+        <a href="../Shipper screen/Delivererlanding.html" class="product-button">Select Delivery</a>
       </div>
     </div>
  
