--- a/User screen/User delivery menu/Delivererlanding.html
+++ b/User screen/User delivery menu/Delivererlanding.html
@@ -14,7 +14,7 @@
   <div class="container">
     <nav>
       <ul>
-        <li><a href="../../shipeasy.html" class="logo">
+        <li><a href="../../index.html" class="logo">
           <img src="customer.jpg">
           <span class="nav-item">Ship Easy</span>
         </a></li>
@@ -35,7 +35,7 @@
           <span class="nav-item">Setting</span>
         </a></li>
 
-        <li><a href="../../shipeasy.html" class="logout">
+        <li><a href="../../index.html" class="logout">
           <i class="fas fa-sign-out-alt"></i>
           <span class="nav-item">Log out</span>
         </a></li>
