--- a/login/usershipper.html
+++ b/login/usershipper.html
@@ -21,17 +21,17 @@
 <body>
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="E:\courses\Web developement\TinDog-Start-master\shipeasy.html">ShipEasy</a>
+          <a class="navbar-brand" href="../index.html">ShipEasy</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="E:\courses\Web developement\TinDog-Start-master\shipeasy.html#features">Features</a>
+                <a class="nav-link" href="../index.html#features">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="E:\courses\Web developement\TinDog-Start-master\shipeasy.html#pricing">Pricing</a>
+                <a class="nav-link" href="../index.html#pricing">Pricing</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="E:\courses\Web developement\TinDog-Start-master\About\about.html">About</a>
